fixing z-index for navbar

--- a/packages/openneuro-components/src/header/header.scss
+++ b/packages/openneuro-components/src/header/header.scss
@@ -17,7 +17,7 @@ header {
   );
 
   position: relative;
-  z-index: 100;
+  z-index: 1101;
 
   @media (max-width: 800px) {
     display: flex;
